✨ gitmoji item design

--- a/src/renderer/src/stylesheets/global.scss
+++ b/src/renderer/src/stylesheets/global.scss
@@ -5,3 +5,9 @@
 body {
   @apply select-none;
 }
+
+@font-face {
+  font-family: 'TossFace';
+  src: url('../fonts/TossFace.ttf') format('truetype');
+}
+
