--- a/src/renderer/src/stylesheets/global.scss
+++ b/src/renderer/src/stylesheets/global.scss
@@ -1,3 +1,5 @@
+@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.6/dist/web/variable/pretendardvariable-dynamic-subset.css");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -5,7 +7,7 @@
 body {
   @apply select-none;
 
-  font-family: 'TossFace', sans-serif;
+  font-family: 'TossFace', 'Pretendard', sans-serif;
 }
 
 @font-face {
