--- a/src/renderer/src/stylesheets/global.scss
+++ b/src/renderer/src/stylesheets/global.scss
@@ -10,6 +10,10 @@ body {
   font-family: 'TossFace', 'Pretendard', sans-serif;
 }
 
+input {
+  font-family: 'TossFace', 'Pretendard', sans-serif;
+}
+
 @font-face {
   font-family: 'TossFace';
   src: url('../fonts/TossFace.ttf') format('truetype');
